# synap-tool

./: CMakeLists.txt  README  default.nix
src/: nrnv1reader.cpp  nrnv1reader.hpp  tool-main.cpp
tests/unit/: CMakeLists.txt
